[Fix] explorerView double scrollbar

--- a/src/styles/workbench/actionView/actionView.css
+++ b/src/styles/workbench/actionView/actionView.css
@@ -10,8 +10,6 @@
     border-width: 1px;
     border-style: solid;
     border-color: #f1f1f1;
-
-    color: white;
 }
 
 #action-view-container {
